--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -105,13 +105,13 @@
 
 \include{1Chapters/4DesignRealization/designRealization}
 
-%\include{1Chapters/Filters/FiltersMAIN}
+\include{1Chapters/Filters/FiltersMAIN}
 %
 %\include{1Chapters/Equalizer/EqualizerMAIN}
 %
 %\include{1Chapters/Limiter/LimiterMAIN}
 %
-%\include{1Chapters/Model/ModelMAIN}
+\include{1Chapters/RMS/RMSMAIN}
 
 \part{Acceptance Test \& Conclusion}
 
