--- a/Rapport/figures/Band1ReqZoom.tex
+++ b/Rapport/figures/Band1ReqZoom.tex
@@ -17,9 +17,9 @@ xmin=0.5,
 xmax=2,
 xminorticks=true,
 xlabel={Normalized frequency [f/fm]},
+ytick ={2,0,-2,-4,-6,-8,-10},
 xmajorgrids,
 xminorgrids,
-ytick={2, 0, -2, -4, -6, -8, -10},
 ymin=-10,
 ymax=2,
 ylabel={Relative gain [dB]},
